--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="choosemap">Choose Map</string>
     <string name="regularview">Regular View</string>
     <string name="cyclemapview">Cycle Map View</string>
+    <string name="setlocation">Set Location</string>
 </resources>
