Added preferences window

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="cyclemapview">Cycle Map View</string>
     <string name="setlocation">Set Location</string>
     <string name="chooselist">Choose Map Style (List)</string>
+    <string name="chooseprefs">Choose Preferences</string>
 </resources>
